--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,48 +52,19 @@ jobs:
   deploy:
     docker:
       - image: circleci/php:7.3-node-browsers
-    environment:
-      AWS_DEFAULT_REGION: ap-northeast-1
     steps:
-      - checkout
-      - restore_cache:
-          key: composer-no-dev-v1-{{ checksum "composer.lock" }}
-      - run: composer install -n --no-dev --prefer-dist
-      - save_cache:
-          key: composer-no-dev-v1-{{ checksum "composer.lock" }}
-          paths:
-            - vendor
-      - restore_cache:
-          key: npm-v1-{{ checksum "package-lock.json" }}
+      - add_ssh_keys
       - run:
-          name: npm ci
+          name: deploy
           command: |
-            if [ ! -d node_modules ]; then
-              npm ci
-            fi
-      - save_cache:
-          key: npm-v1-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
-      - run: npm run prod
-      - run:
-          name: archive artifacts
-          command: zip -ryq exvs-sns.zip .
-      - aws-cli/install
-      - run:
-          name: upload artifacts to s3
-          command: aws s3 cp exvs-sns.zip s3://${AWS_S3_BUCKET_NAME}
-      - run:
-          name: deploy to prod
-          command: |
-            aws deploy create-deployment \
-            --application-name exvs-sns \
-            --deployment-group-name exvs-sns \
-            --s3-location bucket=${AWS_S3_BUCKET_NAME},key=exvs-sns.zip,bundleType=zip
-
-orbs:
-  aws-cli: circleci/aws-cli@1.0.0
-
+            ssh -o StrictHostKeyChecking=no -t webapp@${HOST_NAME} "cd exvs-sns && \
+              git pull origin master && \
+              composer install -n --no-dev --prefer-dist && \
+              npm ci && \
+              npm run prod && \
+              php artisan migrate --force && \
+              php artisan config:cache"
+        
 workflows:
   version: 2
   build_deploy:
