--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/socialite": "^5.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "league/flysystem-aws-s3-v3": "1.*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.4",
