--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^6.2",
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.0",
-        "league/flysystem-aws-s3-v3": "1.*"
+        "league/flysystem-aws-s3-v3": "1.*",
+        "pusher/pusher-php-server": "^5.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.4",
